系统升级，分层

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div id="app"></div>
   <script src="./dist/build.js"></script>
+<!--  <script src="http://192.168.155.1:8899/target/target-script-min.js#anonymous"></script>-->
 </body>
 
 </html>
